@@ -21,6 +21,7 @@ version 5.1:
 - QOI image format support
 - ffprobe -o option
 - virtualbass audio filter
+- VDPAU AV1 hwaccel
 
 
 version 5.0:
